--- a/chamber/css/style2.css
+++ b/chamber/css/style2.css
@@ -25,9 +25,10 @@ section {
 }
 
 h2 {
-    color: #00447c;
+    color: #fafdff;
     border-bottom: 3px solid #FFD700;
     padding-bottom: 10px;
+    text-shadow: 3px 3px 8px rgba(0, 0, 0, 0.7);
 }
 
 ul {
@@ -57,10 +58,11 @@ li {
     bottom: 10%;
     left: 50%;
     transform: translateX(-50%);
-    color: rgb(41, 38, 38);
+    color: rgb(255, 255, 255);
     padding: 15px;
     border-radius: 5px;
     text-align: center;
+    text-shadow: 3px 3px 8px rgba(0, 0, 0, 0.7);
 }
 
 .cta-button {
@@ -73,6 +75,7 @@ li {
     font-weight: bold;
     border-radius: 5px;
     transition: 0.3s ease;
+
 }
 
 .cta-button:hover {
