--- a/styles/style.css
+++ b/styles/style.css
@@ -159,6 +159,31 @@ footer img {
     margin-top: 5px;
 }
 
+/* Course Styling */
+.course-item {
+    padding: 10px;
+    margin: 5px;
+    border-radius: 5px;
+    font-weight: bold;
+    text-align: center;
+    width: 120px;
+}
+
+/* CSE Courses - White Border */
+.course-item.cse {
+    border: 2px solid white;
+    background-color: black;
+    color: white;
+}
+
+/* WDD Courses - Brown Border */
+.course-item.wdd {
+    border: 2px solid #754421;
+    background-color: #f8f8f8;
+    color: black;
+}
+
+
 @media screen and (max-width: 768px) {
     header {
         display: flex;
